// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ManageServersRow /> > renders auto-connect icon only if server is autoConnect 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="responsive-table__row"
      >
        <td
          class="responsive-table__cell"
          data-th="Auto-connect"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-check text-primary"
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            id="autoConnectIcon"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </td>
        <th
          class="responsive-table__cell"
          data-th="Name"
        >
          <a
            data-discover="true"
            href="/server/abc"
          >
            My server
          </a>
        </th>
        <td
          class="responsive-table__cell"
          data-th="Base URL"
        >
          https://example.com
        </td>
        <td
          class="responsive-table__cell text-end"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ManageServersRow /> > renders auto-connect icon only if server is autoConnect 2`] = `
<div>
  <table>
    <tbody>
      <tr
        class="responsive-table__row"
      >
        <td
          class="responsive-table__cell"
          data-th="Auto-connect"
        />
        <th
          class="responsive-table__cell"
          data-th="Name"
        >
          <a
            data-discover="true"
            href="/server/abc"
          >
            My server
          </a>
        </th>
        <td
          class="responsive-table__cell"
          data-th="Base URL"
        >
          https://example.com
        </td>
        <td
          class="responsive-table__cell text-end"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
